--- a/demo/hello-world-1/CMakeLists.txt
+++ b/demo/hello-world-1/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.9)
-project (hello)
+project (hello-world-1)
 set(SOURCES src/main/source.cpp)
 
-add_executable(hello src/main/source.cpp)
+add_executable(hello-world-1 ${SOURCES})
