--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 ./idea/*
+/idea/
+.idea
 
 # Prerequisites
 *.d
@@ -177,3 +179,47 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
+**/cmake-build-debug
+**/CMakeCache.txt
+**/cmake_install.cmake
+**/install_manifest.txt
+**/CMakeFiles/
+**/CTestTestfile.cmake
+**/Makefile
+**/*.cbp
+**/CMakeScripts
+**/compile_commands.json
+
+include/divisible/*
+bin/*
+lib/*
+test/test_runner
+
+## Local
+
+.idea/workspace.xml
+
+build/release/*
+build/debug/*
+build/run/*
+
+include/*
+lib/*
+bin/*
+.bash/
+bin/bootstrap
+bin/lib-bash
